<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group
        android:id="@+id/sort_by"
        android:orderInCategory="1"
        android:title ="@string/sort"
        app:showAsAction= "ifRoom">

        <item
            android:id="@+id/popular_sort"
            android:orderInCategory="1"
            android:title="@string/popular_sort_descend"
            app:showAsAction="never" />
        <item
            android:id="@+id/rating_sort"
            android:orderInCategory="2"
            android:title="@string/rating_sort_descend"
            app:showAsAction="never" />
        <item
            android:id="@+id/favorites_sort"
            android:orderInCategory="3"
            android:title="@string/sort_by_favorites"
            app:showAsAction="never" />
    </group>

</menu>