<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_movie_title"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#000000"
                android:padding="10dp"
                android:background="#d6d6d6" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iv_movie_poster"
                android:layout_gravity="center"
                android:background="#d6d6d6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot_overview"
                android:textSize="15sp"
                android:textColor="#000000"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_plot_overview"
                android:paddingBottom="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_rating"
                android:textSize="15sp"
                android:textColor="#000000"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_user_rating"
                android:paddingBottom="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="#ff0a02"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="15sp"
                android:textColor="#000000"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_release_date"
                android:paddingBottom="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

        </LinearLayout>
    </ScrollView>



</FrameLayout>